--- a/public/css/card.css
+++ b/public/css/card.css
@@ -1,9 +1,9 @@
-.card:hover i {
+.management-section .admin-card:hover i {
     color:gold;
     transform: rotate(5deg) translateY(-5px);
 }
 
-.card:hover {
+.management-section .admin-card:hover {
     background-color: rgb(0, 143, 143);
     transform: scale(1.05);
     box-shadow: 0 4px 15px rgba(0, 255, 255);
