Added a little effect to make it look nicer and to know what page we are currently at

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -91,6 +91,15 @@ body {
   width: calc(100% - 90px);
 }
 
+.sidebar-menu .active {
+  background-color: rgb(0, 143, 143);
+  border-radius: 5px;
+}
+
+.sidebar-menu .nav-link.active i {
+  color: gold;
+}
+
 /* Navbar */
 .navbar {
   display: flex;
