--- a/public/css/card.css
+++ b/public/css/card.css
@@ -8,3 +8,29 @@
     transform: scale(1.05);
     box-shadow: 0 4px 15px rgba(0, 255, 255);
 }
+
+.svg-icons {
+    display: block;
+    margin: 0 auto; 
+    width: 50px;
+    height: 50px;
+    fill: aqua;
+    margin-bottom: 8px;
+    transition: transform 0.3s ease-in-out, fill 0.3s ease-in-out;
+  }
+  
+  
+  .svg-path {
+    fill: aqua;
+    transition: fill 0.3s ease, transform 0.3s ease;
+  }
+  
+  .admin-card:hover .svg-path {
+    fill: gold;
+    transform: none;
+  }
+  
+  .admin-card:hover .svg-icons {
+    fill:gold;
+    transform: rotate(5deg) translateY(-4px);
+  }
