--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -5,6 +5,7 @@
     flex-wrap: wrap;
     justify-content: center;
     gap: 20px;
+    margin-top: 40px;
 }
 
  .admin-card {
@@ -44,7 +45,7 @@
     white-space: normal;
     word-wrap: break-word;
 }
-
+ .admin-card svg,
  .admin-card i {
     font-size: 50px; /* Adjust size */
     color: aqua;  /* Change color */
@@ -60,3 +61,8 @@
     color: inherit; /* Keep text color the same */
     display: inline-block;
   }
+
+ 
+
+ 
+ 
