--- a/public/css/card.css
+++ b/public/css/card.css
@@ -11,21 +11,22 @@
 
 .svg-icons {
     display: block;
-    margin: 0 auto; 
+    margin: 0 auto 10px auto;
     width: 50px;
     height: 50px;
     fill: aqua;
-    margin-bottom: 8px;
-    transition: transform 0.3s ease-in-out, fill 0.3s ease-in-out;
+    transition: fill 2s ease, transform 0.3s ease;
+    transform-box: fill-box;
+    transform-origin: center;
   }
   
   
-  .svg-path {
+  .svg-border {
     fill: aqua;
-    transition: fill 0.3s ease, transform 0.3s ease;
+    transition: fill 2s ease-in-out, transform 0.3s ease; 
   }
   
-  .admin-card:hover .svg-path {
+  .admin-card:hover .svg-border {
     fill: gold;
     transform: none;
   }
@@ -34,3 +35,7 @@
     fill:gold;
     transform: rotate(5deg) translateY(-4px);
   }
+  
+ 
+
+  
