--- a/public/css/card.css
+++ b/public/css/card.css
@@ -1,12 +1,13 @@
 .management-section .admin-card:hover i {
-    color:gold;
+    color: var(--gold);
     transform: rotate(5deg) translateY(-5px);
 }
 
 .management-section .admin-card:hover {
-    background-color: rgb(0, 143, 143);
+ 
     transform: scale(1.05);
-    box-shadow: 0 4px 15px rgba(0, 255, 255);
+
+    border: 1px solid var(--blonde);
 }
 
 .svg-icons {
@@ -14,7 +15,7 @@
     margin: 0 auto 10px auto;
     width: 50px;
     height: 50px;
-    fill: aqua;
+    fill: var(--gold);
     transition: fill 2s ease, transform 0.3s ease;
     transform-box: fill-box;
     transform-origin: center;
@@ -22,7 +23,7 @@
   
   
   .svg-border {
-    fill: aqua;
+    fill: var(--gold);
     transition: fill 2s ease-in-out, transform 0.3s ease; 
   }
   
