--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -1,11 +1,11 @@
 
-
  .card-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     gap: 20px;
     margin-top: 40px;
+    justify-content: space-around;
 }
 
  .admin-card {
@@ -16,7 +16,7 @@
     padding: 10px;
     text-align: center;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
-    background-color: #2C3E50;
+    background-color:  var(--black);
     transition: background-color 2s ease-in-out, transform 0.3s ease-in-out;
     display: flex;
     flex-direction: column;
@@ -30,7 +30,7 @@
 }
 
  .admin-card h3 {
-    height: 40px; /* Ensures consistent height */
+    height: 60px; /* Ensures consistent height */
     overflow: hidden;
     display: -webkit-box;
     -webkit-box-orient: vertical;
@@ -48,7 +48,7 @@
 .admin-card svg,
  .admin-card i {
     font-size: 50px; /* Adjust size */
-    color: aqua;  /* Change color */
+    color: var(--gold);  /* Change color */
     margin-bottom: 10px;
     transition-property: color;
     display: inline-block;
