--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,14 +1,29 @@
+:root{
+  /* primary brand colors */
+  --gold: #B8860B;       /* Dark Goldenrod */
+  --black: #000000;      /* Black */
+  
+  /* Supplementary Colors */
+  --blonde: #FAF0BE;     /* Light blonde */
+  --light-gray: #DAD3CC; /* Soft gray */
+  --white: #FFFFFF;      /* Pure white */
+
+  /* Brand fonts */
+  --font-heading: "Century Gothic", "Apple Gothic", Arial, sans-serif;
+  --font-body: "Century Gothic", "Apple Gothic", Arial, sans-serif;
+}
+
 body {
-  font-family: Arial, sans-serif;
+  font-family: var(--font-body);
   text-align: center;
   margin: 20px;
 }
 
 .sidebar {
-
+  text-align: center;
   width: 250px;
   height: 100vh;
-  background: #2C3E50;
+  background: var(--gold);
   color: white;
   position: fixed;
   padding-top: 20px;
@@ -24,13 +39,9 @@ body {
   
 }
 
-.sidebar-header {
-  text-align: center;
-  font-size: 24px;
-  font-weight: bold;
-  padding: 10px 0;
-  width: 100%;
-  white-space: nowrap;
+/* make logo disappear when collapsed */
+.sidebar.collapsed .sidebar-header h2 {
+  display: none;
 }
 
 .sidebar-menu {
@@ -68,7 +79,7 @@ body {
 }
 
 .sidebar-menu li:hover a i {
-  color: #03fce8; /* Gold color */
+  color: var(--light-gray); /* Gold color */
 }
 
 /* Hide Text When Sidebar is Collapsed */
@@ -92,7 +103,7 @@ body {
 }
 
 .sidebar-menu .active {
-  background-color: rgb(0, 143, 143);
+  background-color: var(--black);
   border-radius: 5px;
 }
 
